--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ channels:
   - defaults
 dependencies:
   - python=3.9
+  - pydantic=1.10.7
   - occwl=1.0
   - pytorch=1.8
   - pytorch-lightning=1.3
@@ -18,4 +19,4 @@ dependencies:
   - scikit-learn
   - torchmetrics=0.3.2
   - tqdm=4.59.0
-  - trimesh=3.9.18
+  - trimesh=3.9.1
